--- a/action.yaml
+++ b/action.yaml
@@ -38,6 +38,10 @@ inputs:
     description: 'Helm chart version'
     required: false
     default: '4.1.5'
+  helm-set-values:
+    description: 'Additional Helm --set values, one per line (e.g., workers.default.keda.queueURL=https://...)'
+    required: false
+    default: ''
 
 outputs:
   hostname:
@@ -107,6 +111,14 @@ runs:
         echo "Hostname: $HOSTNAME"
         echo "Role ARN: $ROLE_ARN"
 
+        # Build extra --set flags from helm-set-values input
+        EXTRA_SETS=""
+        if [ -n "${{ inputs.helm-set-values }}" ]; then
+          while IFS= read -r line; do
+            [ -n "$line" ] && EXTRA_SETS="$EXTRA_SETS --set $line"
+          done <<< "${{ inputs.helm-set-values }}"
+        fi
+
         helm upgrade --install "$RELEASE_NAME" \
           oci://${{ inputs.ecr-registry }}/laravel-app-chart \
           --version ${{ inputs.helm-chart-version }} \
@@ -117,6 +129,7 @@ runs:
           --set global.environment=${{ inputs.release-name }} \
           --set "ingress.default.hosts[0]=$HOSTNAME" \
           --set serviceAccount.roleArn=$ROLE_ARN \
+          $EXTRA_SETS \
           --wait --timeout 10m
 
         echo "hostname=$HOSTNAME" >> $GITHUB_OUTPUT
@@ -155,4 +168,3 @@ runs:
         - Monitor deployment: \`kubectl get pods -n ${{ inputs.namespace }} -l app.kubernetes.io/instance=$RELEASE_NAME\`
         - View logs: \`kubectl logs -n ${{ inputs.namespace }} -l app.kubernetes.io/instance=$RELEASE_NAME\`
         EOF
-
